Fix extra space after about/footer.

--- a/assets/styles/_about.scss
+++ b/assets/styles/_about.scss
@@ -6,7 +6,6 @@
 
 	@include landscape {
 		margin-top:     calc(-1 * var(--tagline--height) - var(--margin));
-		padding-bottom: calc(var(--tagline--height) + var(--margin));
 		padding-left:   initial; // Grid gaps take over.
 		padding-right:  initial;
 	}
